--- a/AssignmentTobias.ipynb
+++ b/AssignmentTobias.ipynb
@@ -6,7 +6,7 @@
       "name": "AssignmentTobias.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP4JmHg4gTKFA4CvISGj+FB",
+      "authorship_tag": "ABX9TyN4KTIIJNcgqF8cyKVc66gF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2539,7 +2539,7 @@
         "\n",
         "The Describing method allows the user to sort through the data to find the standard deviation, the mean and statistics of the dataset.\n",
         "\n",
-        "The sorting method is used to sort values by alphabetical order in either ascending or descending."
+        "The sorting method is used to sort values by alphabetical order in either ascending or descending. I learnt this function from Keith Glli's youtube video on pandas. https://www.youtube.com/watch?v=vmEHCJofslg "
       ]
     },
     {
@@ -2549,7 +2549,7 @@
         "outputId": "a247e308-dfea-4eeb-edd8-b757b2834b8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 623
+          "height": 886
         }
       },
       "source": [
@@ -2823,7 +2823,7 @@
         "outputId": "d70f8e04-d3ae-4ad0-9a8d-c811dda49da5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 650
+          "height": 947
         }
       },
       "source": [
@@ -3081,7 +3081,7 @@
       "source": [
         "# **8.Minimun/Maximum:**\n",
         "\n",
-        "This is a method used to return the higest or lowest numerical value in a specified column."
+        "This is a method used to return the higest or lowest numerical value in a specified column. I found this function on a website called datacamp. https://www.youtube.com/watch?v=vmEHCJofslg"
       ]
     },
     {
@@ -3134,7 +3134,7 @@
       "source": [
         "# **9.Conditional Changes:**\n",
         "\n",
-        "This is a method used to change values or names within the dataframe based on the conditions used to filter the output of the method."
+        "This is a method used to change values or names within the dataframe based on the conditions used to filter the output of the method. I learnt this from Keith Galli's youtube tutorial on pandas. https://www.youtube.com/watch?v=vmEHCJofslg"
       ]
     },
     {
@@ -3144,7 +3144,7 @@
         "outputId": "7c701806-e20a-4878-a4f7-0aec07855b37",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 745
+          "height": 990
         }
       },
       "source": [
@@ -3413,7 +3413,7 @@
       "source": [
         "# **10.Aggregate Statistics using Groupby:**\n",
         "\n",
-        "This function allows you to do more advanced analysis on the dataframe. After grouping the usr can pass aggregation functions to the grouped object as a dictionary within the aggregated function."
+        "This function allows you to do more advanced analysis on the dataframe. After grouping the usr can pass aggregation functions to the grouped object as a dictionary within the aggregated function. I learnt this function from Keith Gali's Panda tutorial. https://www.youtube.com/watch?v=vmEHCJofslg"
       ]
     },
     {
